Baked references in hazard analysis into references.bib file. Deleted bib.bib file from hazard analysis folder.

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -797,11 +797,8 @@ For example BED\_ERR\_NONE represent that the system is working correctly. Some 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{bib}
+\bibliographystyle{plainnat}
+\bibliography{../../refs/References}
 
 
 
