--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -81,7 +81,7 @@ The [name of device] will perform EMA analysis in a manner which even older part
 
 This document is intended to describe the plan for verification and validation of the device. Here, verification and validation are both technical terms with very specific meanings.\\
 
-Verification involves checking whether or not the specifications which were described in the planning phase of the project are implemented correctly by the final system designed. Validation involves checking whether or not the product actually fulfills the needs of the end user of the device. In the words of Barry Boehm, verification asks, "Are we building the product right?" and validation asks, "Are we building the right product?".\cite{pham_1999}
+Verification involves checking whether or not the specifications which were described in the planning phase of the project are implemented correctly by the final system designed. Validation involves checking whether or not the product actually fulfills the needs of the end user of the device. In the words of Barry Boehm, verification asks, "Are we building the product right?" and validation asks, "Are we building the right product?"\cite{pham_1999}.
 
 \subsection{Objectives}
 
