--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -433,25 +433,68 @@ Their values are defined in this section for easy maintenance.
 \newpage{}
 \section*{Appendix --- Reflection}
 
-The information in this section will be used to evaluate the team members on the
-graduate attribute of Lifelong Learning.  Please answer the following questions:
-
-\newpage{}
-\section*{Appendix --- Reflection}
-
-The information in this section will be used to evaluate the team members on the
-graduate attribute of Lifelong Learning.  Please answer the following questions:
-
 \begin{enumerate}
-  \item What knowledge and skills will the team collectively need to acquire to
-  successfully complete the verification and validation of your project?
-  Examples of possible knowledge and skills include dynamic testing knowledge,
-  static testing knowledge, specific tool usage etc.  You should look to
-  identify at least one item for each team member.
-  \item For each of the knowledge areas and skills identified in the previous
-  question, what are at least two approaches to acquiring the knowledge or
-  mastering the skill?  Of the identified approaches, which will each team
-  member pursue, and why did they make this choice?
-\end{enumerate}
+  \item \textit{What knowledge and skills will the team collectively need to acquire to
+        successfully complete this capstone project?  Examples of possible knowledge
+        to acquire include domain specific knowledge from the domain of your
+        application, or software engineering knowledge, mechatronics knowledge or
+        computer science knowledge.  Skills may be related to technology, or writing,
+        or presentation, or team management, etc.  You should look to identify at
+        least one item for each team member.}\\
 
+	Approximately a third of this project's timeline has passed at this point. So far, team members have spent the vast majority of their time generating documentation for this project. In the process of doing so, the team has garnered a good sense of the learning styles, working styles, and habits of each individual team member.\\
+
+Now that the planning phase has largely passed, now is the right moment to utilize this newfound knowledge about the team to maximum effect. Team \#1 is lucky; each of its team members is deeply committed to achieving excellence in this project. As a result, they are willing to use knowledge about the strengths, weaknesses, and differences of each member in the aim of working as efficiently and effectively as possible. Synergy has become the greatest strength for Team \#1, on top of the large collection of diverse skills held by Team \#1's individual members.\\
+
+Naturally, identifying the advantages of collaboration in Team \#1 also sheds light on potential blind spots. For this specific team, these blind spots mostly rest within the "soft skills", as team members already are quite proficient with the tools and hard skills necessary to bring this project to fruition.\\
+
+These soft skills are:
+	\begin{itemize}
+	\item \textbf{Jessica:} Critical Thinking
+	\item \textbf{Oliver:} Engagement During Meetings
+	\item \textbf{Jonathan:} Time Management
+	\item \textbf{Anish:} Positive Attitude
+	\item \textbf{Nish:} Leadership
+	\item \textbf{Labeeb:} Communication
+	\end{itemize}
+
+Developing these skills will be essential to the success of the project. It is the responsibility of each individual team member to work on their skills, but it is also necessary for the rest of the team to support them appropriately and make considerations to help fill any holes left behind.
+	
+  \item \textit{For each of the knowledge areas and skills identified in the previous
+        question, what are at least two approaches to acquiring the knowledge or
+        mastering the skill?  Of the identified approaches, which will each team
+        member pursue, and why did they make this choice?}
+	\begin{itemize}
+	\item \textbf{Critical Thinking:}
+		\begin{enumerate}
+		\item \textit{For Jessica:} Consider the "why" for each important decision made in the project.
+		\item \textit{For the Team:} Host design review sessions regularly to look back and determine whether or not the project is headed in the right direction.
+		\end{enumerate}
+	\item \textbf{Engagement During Meetings:}
+		\begin{enumerate}
+		\item \textit{For Oliver:} Chair a third of all meetings going forward.
+		\item \textit{For the Team:} Assign a portion of every meeting to questions and feedback, without any other tasks preempting this section.
+		\end{enumerate}
+	\item \textbf{Time Management:}
+		\begin{enumerate}
+		\item \textit{For Jonathan:} Set up automated reminders and schedules for capstone related tasks.
+		\item \textit{For the Team:} Parcel work into sections in which the workload required is easily understood and planned for.
+		\end{enumerate}
+	\item \textbf{Positive Attitude:}
+		\begin{enumerate}
+		\item \textit{For Anish:} Identify 3 things about each team member for which they are grateful for.
+		\item \textit{For the Team:} Actively celebrate the successes of the team, and regularly recognize the achievements of each individual team member.
+		\end{enumerate}
+	\item \textbf{Leadership:}
+		\begin{enumerate}
+		\item \textit{For Nish:} Ensure input at least once into every major decision made by the team.
+		\item \textit{For the Team:} Whenever making an important decision, ask each individual member for their opinion.
+		\end{enumerate}
+	\item \textbf{Communication:}
+		\begin{enumerate}
+		\item \textit{For Labeeb:} Raise every concern that comes to mind. Regardless of size or importance.
+		\item \textit{For the Team:} Create a section on the Trello board specifically for non-objective related concerns.
+		\end{enumerate}
+	\end{itemize}
+\end{enumerate}
 \end{document}
